Chapter18/kubernetes/services/base/istio/jwt-authentication-policy.yml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "jwt-authentication-policy"
spec:
  selector:
    matchLabels:
      app: product-composite
  jwtRules:
    - issuer: "http://auth-server.local"
      jwksUri: "http://auth-server.hands-on.svc.cluster.local/.well-known/jwks.json"
