Chapter18/kubernetes/services/base/istio/auth-server-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-server-vs
spec:
  hosts:
    - "minikube.me"
  gateways:
    - hands-on-gw
  http:
    - match:
        - uri:
            prefix: /oauth
      route:
        - destination:
            host: auth-server
